--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     min-height: 100vh;
     background: linear-gradient(to top,
-            #cfd9df, #e2ebf0);
+            #ECF4E8, #ABE7B2);
     padding: 10px;
 }
 
@@ -44,7 +44,7 @@ h3 img {
     justify-content: space-between;
     outline: 3px groove black;
     outline-offset: 5px;
-    border: none;
+
     border-radius: 30px;
     margin-bottom: 20px;
     box-shadow: 0 0 10px #5d5d5d;
@@ -52,9 +52,9 @@ h3 img {
 
 input {
     flex: 1;
-    border: none;
     outline: none;
     background: transparent;
+    border: none;
     font-size: 18px;
     font-weight: 600px;
     letter-spacing: 1px;
@@ -65,11 +65,11 @@ input::placeholder {
     color: #1e002f;
 }
 
-button {
+#addTask {
     border: none;
     outline: none;
     padding: 16px;
-    background: #26062f;
+    background: #4A70A9;
     color: white;
     font-size: 18px;
     font-weight: 600;
@@ -78,38 +78,41 @@ button {
     margin: 1px;
 }
 
-ul li {
-    list-style: none;
-    font-size: 18px;
-    font-weight: 500px;
-    letter-spacing: 1px;
-    padding: 12px 8px 12px 50px;
-    cursor: pointer;
-    position: relative;
-    margin-block: 10px;
+
+.main {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+
+
+
 }
 
-ul li::before {
-    content: " ";
-    position: absolute;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    background: url(images/check-mark-hand-drawn-circle_78370-5986.avif);
-    background-size: cover;
-    position: center;
-    top: 12px;
-    left: 8px;
-}
-
-ul li.checked {
-    background: #3700a4;
+#btn {
+    justify-content: center;
+    height: 20px;
+    width: 50px;
+    background: #4A70A9;
     color: white;
-    border-radius: 50px;
+    font-size: 10px;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 10px;
+    margin: 10px;
+    
+    
 
 }
 
-ul li.checked::before {
-    background: url(images/check-mark-hand-drawn-circle_78370-5986.avif);
-    background-size: cover;
+#del{
+    justify-content: center;
+    height: 20px;
+    width: 50px;
+    background:#DC0E0E;
+    color: white;
+    font-size: 10px;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 10px;
+    margin: 10px;
 }
